--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.34",
+    "expo": "~51.0.38",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.5",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
@@ -31,13 +31,15 @@
     "react-native": "0.74.5",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-mmkv": "^3.0.2",
     "react-native-modal": "^13.0.1",
     "react-native-really-awesome-button": "^2.0.4",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^3.4.13",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
