--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.13",
-    "zustand": "^5.0.0"
+    "zustand": "^5.0.0",
+    "expo-asset": "~10.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
