--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-mmkv": "^3.0.2",
     "react-native-modal": "^13.0.1",
@@ -42,7 +41,8 @@
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.13",
     "zustand": "^5.0.0",
-    "expo-asset": "~10.0.10"
+    "expo-asset": "~10.0.10",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
