--- a/package.json
+++ b/package.json
@@ -17,27 +17,27 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/native": "^6.0.2",
-    "expo": "^52.0.6",
+    "@react-navigation/native": "^7.0.0",
+    "expo": "^52.0.7",
     "expo-asset": "~11.0.1",
     "expo-constants": "~17.0.3",
     "expo-image": "~2.0.0",
     "expo-linking": "~7.0.2",
-    "expo-router": "~4.0.5",
-    "expo-splash-screen": "~0.29.9",
+    "expo-router": "~4.0.6",
+    "expo-splash-screen": "~0.29.11",
     "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.2",
+    "expo-system-ui": "~4.0.3",
     "expo-web-browser": "~14.0.1",
     "nativewind": "^4.1.10",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.1",
+    "react-native": "0.76.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-modal": "^13.0.1",
     "react-native-really-awesome-button": "^2.0.4",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.0.0",
+    "react-native-screens": "^4.0.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
     "tailwindcss": "^3.4.13",
@@ -53,7 +53,7 @@
     "eslint": "^9.11.0",
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.1",
+    "jest-expo": "~52.0.2",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "react-test-renderer": "18.2.0",
