--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.0",
-    "expo": "^52.0.7",
+    "expo": "~52.0.8",
     "expo-asset": "~11.0.1",
     "expo-constants": "~17.0.3",
-    "expo-image": "~2.0.0",
-    "expo-linking": "~7.0.2",
-    "expo-router": "~4.0.6",
+    "expo-image": "~2.0.1",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.7",
     "expo-splash-screen": "~0.29.11",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
@@ -33,11 +33,12 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-google-mobile-ads": "^14.4.0",
     "react-native-modal": "^13.0.1",
     "react-native-really-awesome-button": "^2.0.4",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "^4.0.0",
+    "react-native-screens": "~4.1.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
     "tailwindcss": "^3.4.13",
