--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
+    "firebase": "^11.0.2",
     "nativewind": "^4.1.10",
     "react": "18.3.1",
     "react-dom": "18.3.1",
