--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
     "tailwindcss": "^3.4.13",
-    "zustand": "^5.0.0"
+    "zustand": "^5.0.0",
+    "expo-av": "~15.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
